Fix scrollbar issue in ie

--- a/ESSArch_PP/frontend/static/frontend/styles/modules/index.scss
+++ b/ESSArch_PP/frontend/static/frontend/styles/modules/index.scss
@@ -9,6 +9,7 @@ body {
     margin: 0px auto;
     min-width: 680px;
     overflow: auto;
+    -ms-overflow-style: scrollbar;
 }
 body.modal-open {
     overflow: auto;
